cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

/* Opaque handle types */
typedef struct MLIRContext_* MLIRContextHandle;
typedef struct MLIRType_* MLIRTypeHandle;
void mlir_string_destroy(char* str);
/* Type creation */
MLIRTypeHandle mlir_type_create_f32(MLIRContextHandle context);
MLIRTypeHandle mlir_type_create_f64(MLIRContextHandle context);
MLIRTypeHandle mlir_type_create_i32(MLIRContextHandle context);
MLIRTypeHandle mlir_type_create_i64(MLIRContextHandle context);
MLIRTypeHandle mlir_type_create_tensor_ranked(MLIRContextHandle context,
                                               const int64_t* shape,
                                               size_t rank,
                                               MLIRTypeHandle elementType);
MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context,
                                                size_t rank,
                                                MLIRTypeHandle elementType);