cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * {@snippet lang=c :
     * void mlir_string_destroy(char *str)
     * }
     */
    public static void mlir_string_destroy(MemorySegment str) {
        var mh$ = mlir_string_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_string_destroy", str);
            }
            mh$.invokeExact(str);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f32(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_type_create_f32$descriptor() {
        return mlir_type_create_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f32(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_type_create_f32$handle() {
        return mlir_type_create_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f32(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_f32$address() {
        return mlir_type_create_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f32(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_f32(MemorySegment context) {
        var mh$ = mlir_type_create_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_f32", context);
            }
            return (MemorySegment)mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_f64 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_f64");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f64(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_type_create_f64$descriptor() {
        return mlir_type_create_f64.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f64(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_type_create_f64$handle() {
        return mlir_type_create_f64.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f64(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_f64$address() {
        return mlir_type_create_f64.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_f64(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_f64(MemorySegment context) {
        var mh$ = mlir_type_create_f64.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_f64", context);
            }
            return (MemorySegment)mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_i32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_i32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i32(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_type_create_i32$descriptor() {
        return mlir_type_create_i32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i32(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_type_create_i32$handle() {
        return mlir_type_create_i32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i32(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_i32$address() {
        return mlir_type_create_i32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i32(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_i32(MemorySegment context) {
        var mh$ = mlir_type_create_i32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_i32", context);
            }
            return (MemorySegment)mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_i64 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_i64");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i64(MLIRContextHandle context)
     * }
     */
    public static FunctionDescriptor mlir_type_create_i64$descriptor() {
        return mlir_type_create_i64.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i64(MLIRContextHandle context)
     * }
     */
    public static MethodHandle mlir_type_create_i64$handle() {
        return mlir_type_create_i64.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i64(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_i64$address() {
        return mlir_type_create_i64.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_i64(MLIRContextHandle context)
     * }
     */
    public static MemorySegment mlir_type_create_i64(MemorySegment context) {
        var mh$ = mlir_type_create_i64.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_i64", context);
            }
            return (MemorySegment)mh$.invokeExact(context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_tensor_ranked {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_tensor_ranked");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_ranked(MLIRContextHandle context, const int64_t *shape, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static FunctionDescriptor mlir_type_create_tensor_ranked$descriptor() {
        return mlir_type_create_tensor_ranked.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_ranked(MLIRContextHandle context, const int64_t *shape, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MethodHandle mlir_type_create_tensor_ranked$handle() {
        return mlir_type_create_tensor_ranked.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_ranked(MLIRContextHandle context, const int64_t *shape, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MemorySegment mlir_type_create_tensor_ranked$address() {
        return mlir_type_create_tensor_ranked.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_ranked(MLIRContextHandle context, const int64_t *shape, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MemorySegment mlir_type_create_tensor_ranked(MemorySegment context, MemorySegment shape, long rank, MemorySegment elementType) {
        var mh$ = mlir_type_create_tensor_ranked.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_type_create_tensor_ranked", context, shape, rank, elementType);
            }
            return (MemorySegment)mh$.invokeExact(context, shape, rank, elementType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_type_create_tensor_dynamic {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_type_create_tensor_dynamic");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static FunctionDescriptor mlir_type_create_tensor_dynamic$descriptor() {
        return mlir_type_create_tensor_dynamic.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MethodHandle mlir_type_create_tensor_dynamic$handle() {
        return mlir_type_create_tensor_dynamic.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRTypeHandle mlir_type_create_tensor_dynamic(MLIRContextHandle context, size_t rank, MLIRTypeHandle elementType)
     * }
     */
    public static MemorySegment mlir_type_create_tensor_dynamic$address() {
        return mlir_type_create_tensor_dynamic.ADDR;
    }
